# JupJup

./: .gitignore  .pre-commit-config.yaml  README.md  access_token.py  batch_runner.py  callback.py  choose.py  collect.py  fetch.py  keywords.py  load.py  logger.py  post_message_bot.py  pyproject.toml  queries.py  redis-server  refine.py  requirements.txt  run_batch.bat  save_all_messages_to_cache.py  secret.py  select_column.py  test.py  variables.py
.github/workflows/: lint.yaml  post_pr.py  pr_created.yaml  pr_lifecycle.yaml  pr_reviewed.yaml
batch/: android_app_review.py  database.py  dml.py  fetch.py  repo.py  scorer.py  utils.py  variables.py
batch/compare_army/: keywords.py  make_message.py  prompt.py
batch/compare_travel/: keywords.py  load.py  make_message.py  prompt.py  select_column.py
batch/geek_news/: load.py  make_message.py
batch/geeknews/: gpt_rank.py  load.py  make_message.py  payload.py  rank.py
batch/issue/: keywords.py  load.py  make_message.py  prompt.py
batch/models/: request.py  response.py
batch/narasarang/: gpt_rank.py  keywords.py  load.py  make_message.py  prompt.py
batch/product/: keywords.py  load.py  make_message.py  (+3 more)
bot/: access_token.py  choose.py  default_messages.py  experimental.py  get_weather.py  issue.py  menu.py  message.py  openai_client.py  post_message.py  post_message_bot.py  prompt.py  review.py  scheduler_runner.py  utils.py
data/: blog.csv  blog.json  cafe.csv  cafe.json  datalab.json  news.csv  news.json
data_collect/: fetch.py  load.py  refine.py  select_column.py  utils.py  variables.py
models/: request.py  response.py
src/: datalab_test.py  test.py
(+75 files in other folders)
