[project]
name = "jupjup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pre-commit>=4.4.0",
    "pydantic>=2.12.4",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
]
