[project]
name = "jupjup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "fastapi-cache2>=0.2.2",
    "google-play-scraper>=1.2.7",
    "holidayskr>=0.2.0",
    "korean-lunar-calendar>=0.3.1",
    "openai>=2.8.1",
    "openai-agents>=0.8.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pyjwt>=2.10.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "retry>=0.9.2",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
